fix: ThirdFixed html file

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <h1>Mikhail Lebedev</h1>
         <div class="contact_info">
             <h4 class="contact__h4">My Contact Info:</h4>
-            <img class="my__photo" src="https://sun9-39.userapi.com/impf/c852032/v852032790/7be96/rdHlMpvrHE8.jpg?size=720x1080&quality=96&sign=99b75b3137d206d1a406d45fdbb4ad66&type=album" alt="фото"><img <ul>
-            <ul>
-                <li>Phone: +7-921-420-12-70</li>
-                <li>Telegram: Mihacik </li>
-                <li>GitHub: mike-lebedev</li>
-            </ul>
-        </div>
+            <img class="my__photo" src="https://sun9-39.userapi.com/impf/c852032/v852032790/7be96/rdHlMpvrHE8.jpg?size=720x1080&quality=96&sign=99b75b3137d206d1a406d45fdbb4ad66&type=album" alt="фото"></div>
+        <ul>
+            <li>Phone: +7-921-420-12-70</li>
+            <li>Telegram: Mihacik </li>
+            <li>GitHub: mike-lebedev</li>
+        </ul>
+    </div>
     </div>
 
     <div class="about__me">
