fix: 5Fixed html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -9,8 +8,8 @@
     <title>Document</title>
 </head>
 
-<body class="body">
-    <img class="my__photo" src="https://sun9-39.userapi.com/impf/c852032/v852032790/7be96/rdHlMpvrHE8.jpg?size=720x1080&quality=96&sign=99b75b3137d206d1a406d45fdbb4ad66&type=album" alt="фото">
+<body>
+
 </body>
 
 </html>
