feat: add html css img

--- a/index.html
+++ b/index.html
@@ -5,14 +5,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My CV</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./assets_img/FavIcon.png" sizes="32x32">
 </head>
 
 <body>
+    <header class="header">
+        <div class="container header-container">
+            <div class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#About_me" class="nav-link">
+                        About me
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contacts" class="nav-link">
+                        Contacts
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Skills" class="nav-link">
+                        Skills
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Code_examples" class="nav-link">
+                        Code examples
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Education" class="nav-link">
+                        Education
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Language" class="nav-link">
+                        Language
+                    </a>
+                    </li>
+                </ul>
 
+            </div>
+
+        </div>
+
+    </header>
+    <main class="main">
+        <div class="container main-container">
+            <section class="section section-profile" id="About_me">
+                <img src="./assets_img/MyPhoto.jpg" alt="My photo" width="200" height="250">
+                <div class="section-profile-title">
+                    <h1 class="main-title">MIKHAIL LEBEDEV</h1>
+                    <h2 class="section-subtitle">unemployed</h2>
+                </div>
+            </section>
+
+            <section class="container" id="About_me">
+
+                <div class="">
+                    <h3 class="">About me</h3>
+                    <p>I worked at a job I didn't like and in my spare time I got interested in programming. At that moment I met a girl and I wanted to make a website for her, she is a photographer. I found video tutorials on YouTube and wrote frontend
+                        from scratch. <i>I learned css and html on my own.</i></p>
+                </div>
+                <ul class="section-my_strengths"> My strengths:
+                    <li class="section-about_me-img">
+                        I always do the job to the end if I enjoy it
+                    </li>
+                    <li class="section-about_me-img">
+                        Fast learner
+                    </li>
+                    <li class="section-about_me-img">
+                        I love my sense of style
+                    </li>
+                    <li class="section-about_me-img">
+                        I only do what I like
+                    </li>
+
+
+                </ul>
+            </section>
+        </div>
+    </main>
 </body>
 
 </html>
-
-
-<li>тест</li>
