fix: eddit html after validator

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ align-items: center;
             <a class="none" target="_blank" href="https://rs.school/js/">
                 <img src="/assets_img/rsschooljs.svg" alt="RSSchool link">
             </a>
+        </div>
     </footer>
 
 </body>
