fix: fixed problem with img

--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
                 <h2 class="tittle">Contacts</h2>
                 <div class="contacts__items">
                     <ul class="ul_contacts">
-                        <li class="discord_icon">
-                            <img src="/assets_img/discord.png" alt="discord" width="15" height="15">
+                        <li class="сontacts__icon_discord">
                             <div class="contacts__name">SirMisha#1770</div>
                         </li>
-                        <li class="telegram_icon">
-                            <img src="/assets_img/telegram.png" alt="telegram" width="15" height="15">
+                        <li class="сontacts__icon_telegram">
                             <div class="contacts__name">Mihacik</div>
                         </li>
                     </ul>
@@ -164,7 +162,7 @@ align-items: center;
         </div>
         <div class="footer-rsschool">
             <a class="none" target="_blank" href="https://rs.school/js/">
-                <img src="/assets_img/rsschooljs.svg" alt="RSSchool link">
+                <img src="./assets_img/rsschooljs.svg" alt="RSSchool link">
             </a>
         </div>
     </footer>
