--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <div class="contacts__items">
                     <ul class="ul_contacts">
                         <li class="сontacts__icon_discord">
-                            <div class="contacts__name">SirMisha#1770</div>
+                            <a class="none" target="_blank" href="https://discordapp.com/users/SirMisha#1770">SirMisha#1770
                         </li>
                         <li class="сontacts__icon_telegram">
-                            <div class="contacts__name">Mihacik</div>
+                            <a class="none" target="_blank" href="https://t.me/Mihacik">Mihacik
                         </li>
                     </ul>
                 </div>
@@ -159,13 +159,13 @@ align-items: center;
         <div class="footer-github">
             <a target="_blank" href="https://github.com/mike-lebedev">
                 <img src="./assets_img/github-logo.png" alt="GitHub" width="18" height="18"> Me on GitHub</a>
-        </div>
-        <div class="footer-rsschool">
-            <a class="none" target="_blank" href="https://rs.school/js/">
-                <img src="./assets_img/rsschooljs.svg" alt="RSSchool link">
-            </a>
-        </div>
-    </footer>
+                </div>
+                <div class="footer-rsschool">
+                    <a class="none" target="_blank" href="https://rs.school/js/">
+                        <img src="./assets_img/rsschooljs.svg" alt="RSSchool link">
+                    </a>
+                </div>
+                </footer>
 
 </body>
 
