fix: edit index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         function filterString(str, word) {
                             let result = '';
                             let i = 0;
-                            while (i < str.length) {
+                            while (i &lt; str.length) {
                               if (str[i] !== word) {
                                 result = result + str[i];
                               }
